# content_understanding_azure

./: .gitignore  README.md  classify_and_route_architecture.md  main.py  pyproject.toml  requirements.txt  setup_output.txt
analyzers/: bank_statement_analyzer.json  classifier_analyzer.json  contract_analyzer.json  invoice_analyzer.json  kyc_analyzer.json  loan_application_analyzer.json  medical_report_analyzer.json  purchase_order_analyzer.json
client/: __init__.py  content_understanding_client.py
frontend/: app.js  index.html  style.css
scripts/: 01_setup_analyzers.py  02_classify_and_route copy.py  02_classify_and_route.py  02_classify_and_route_copy.py  02_refactored.py  03_extract_and_display.py  03_general_content_extraction.py  04_manage_analyzers.py
sdk test/: sdk.txt  sdk_methods.txt  sdk_test.txt  sdk_test_2.txt  sdk_test_res.json  test_sdk.py  test_sdk_2.py
